Crash on delete or separate vertices with subsurf modifier + vertex parenting #42557

Closed
opened 2014-11-10 01:40:30 +01:00 by Daniel Salazar · 8 comments
Member

System Information

openSUSE 12.3 64bits
NVIDIA 480GTX SC
AMD FX-8350

Blender Version
Broken: 6c5e2ac

Short description of error

Crasher when deleting or separating any vertex of this model.
Seems to be related to the SubD modifier + vertex parenting.
If I disable the SubD the crash doesn't happen until I enable it again.

Exact steps for others to reproduce the error

vparent_subdiv_crash.blend
Delete or Separate selected vertices

**System Information** openSUSE 12.3 64bits NVIDIA 480GTX SC AMD FX-8350 **Blender Version** Broken: 6c5e2ac **Short description of error** Crasher when deleting or separating any vertex of this model. Seems to be related to the SubD modifier + vertex parenting. If I disable the SubD the crash doesn't happen until I enable it again. **Exact steps for others to reproduce the error** [vparent_subdiv_crash.blend](https://archive.blender.org/developer/F123234/vparent_subdiv_crash.blend) Delete or Separate selected vertices
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Member
The crash seems to be occurring at: https://developer.blender.org/diffusion/B/browse/master/source/blender/blenkernel/intern/object.c;6c5e2ac7e666e6fac5b831a16c337eabbd88f4f6$2208 ccg_vert and co are both NULL when this happens.
Daniel Salazar changed title from Crash on delete or separate vertices with subsurf modifier (Urgent Gooseberry fix) to Crash on delete or separate vertices with subsurf modifier 2014-11-10 03:04:19 +01:00
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Bastien Montagne was assigned by Julian Eisel 2014-11-10 23:46:55 +01:00
Daniel Salazar changed title from Crash on delete or separate vertices with subsurf modifier to Crash on delete or separate vertices with subsurf modifier + vertex parenting 2014-11-11 09:12:40 +01:00

This issue was referenced by b49df09d89

This issue was referenced by b49df09d89ad130f5f2a993c16a04d9bc2264952

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit b49df09d89.

Closed by commit b49df09d89.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42557
No description provided.